[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/safetyculture_mcp"]

[project]
name = "safetyculture-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastmcp==3.4.2",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
